Fixed color contrasts on all pages

--- a/wdd230-final-project/css/small.css
+++ b/wdd230-final-project/css/small.css
@@ -50,7 +50,6 @@ nav ul.appear {display: block; order: 1;}
     display: flex;
     flex-direction: column;
     background-color: #C5D2D6;
-    height: 75px;
     border-radius: 10px;
     margin: 5px;
 }
@@ -768,7 +767,7 @@ form input:required:valid {
     width: 70%;
     background-color: rgb(197,210,214);
     margin: auto;
-    border: 2px solid #33291F
+    border: 2px solid #33291F;
 }
 
 .weddingReceptionInnerSection h1 {
@@ -786,14 +785,14 @@ form input:required:valid {
     max-width: 500px;
     min-width: 250px;
     justify-self: center;
-    background-color: #624C40;
+    background-color: #484041;
     border-radius: 20px;
     border: 2px solid #484041;
     margin: 5px;
 }
 
 .receptionFoodSection, .receptionSetupSection {
-    background-color: #988B6D;
+    background-color: #624C40;
     border-radius: 10px;
     border: 2px solid #33291F;
     display: flex;
@@ -833,14 +832,18 @@ form input:required:valid {
     max-width: 500px;
     min-width: 250px;
     justify-self: center;
-    background-color: #624C40;
+    background-color: #484041;
     border-radius: 20px;
     border: 2px solid #484041;
     margin: 5px;
 }
 
+.serviceGreeting {
+    min-width: 300px;
+}
+
 .juniorSuiteSection, .standardSuiteSection, .suiteContactSection {
-    background-color: #988B6D;
+    background-color: #624C40;
     border-radius: 10px;
     border: 2px solid #33291F;
     display: flex;
@@ -896,7 +899,7 @@ form input:required:valid {
     max-width: 300px;
     width: 80%;
     border-radius: 10px;
-    background-color: rgb(197,210,214,.8);
+    background-color: rgb(197,210,214,.9);
     text-shadow: 0 0 4px #fff;
     padding: 5px;
 }
@@ -918,7 +921,7 @@ form input:required:valid {
     max-width: 300px;
     width: 80%;
     border-radius: 10px;
-    background-color: rgb(197,210,214,.8);
+    background-color: rgb(197,210,214,.9);
     text-shadow: 0 0 4px #fff;
     padding: 5px;
 }
@@ -980,14 +983,14 @@ form input:required:valid {
     max-width: 650px;
     min-width: 250px;
     justify-self: center;
-    background-color: #624C40;
+    background-color: #484041;
     border-radius: 20px;
     border: 2px solid #484041;
     margin: 5px;
 }
 
 .referencesSection {
-    background-color: #988B6D;
+    background-color: #624C40;
     border-radius: 10px;
     border: 2px solid #33291F;
     display: flex;
